Basic turn of game implemented.

--- a/scopone_scientifico_dev.ipynb
+++ b/scopone_scientifico_dev.ipynb
@@ -10,24 +10,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting tqdm\n",
-      "  Downloading tqdm-4.67.0-py3-none-any.whl.metadata (57 kB)\n",
-      "Downloading tqdm-4.67.0-py3-none-any.whl (78 kB)\n",
-      "Installing collected packages: tqdm\n",
-      "Successfully installed tqdm-4.67.0\n",
+      "Requirement already satisfied: tqdm in ./.venv/lib/python3.9/site-packages (4.67.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting numpy\n",
+      "  Using cached numpy-2.0.2-cp39-cp39-macosx_14_0_arm64.whl.metadata (60 kB)\n",
+      "Using cached numpy-2.0.2-cp39-cp39-macosx_14_0_arm64.whl (5.3 MB)\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.0.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting pandas\n",
+      "  Using cached pandas-2.2.3-cp39-cp39-macosx_11_0_arm64.whl.metadata (89 kB)\n",
+      "Requirement already satisfied: numpy>=1.22.4 in ./.venv/lib/python3.9/site-packages (from pandas) (2.0.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib/python3.9/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Using cached pytz-2024.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Using cached tzdata-2024.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.9/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Using cached pandas-2.2.3-cp39-cp39-macosx_11_0_arm64.whl (11.3 MB)\n",
+      "Using cached pytz-2024.2-py2.py3-none-any.whl (508 kB)\n",
+      "Using cached tzdata-2024.2-py2.py3-none-any.whl (346 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.3 pytz-2024.2 tzdata-2024.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install tqdm"
+    "%pip install tqdm\n",
+    "%pip install numpy\n",
+    "%pip install pandas"
    ]
   },
   {
@@ -70,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,67 +107,69 @@
     "    def deal(self, num_cards: int) -> List[Card]:\n",
     "        return [self.cards.pop() for _ in range(num_cards)]\n",
     "    \n",
-    "    def print(self):\n",
-    "        print('#' * 10 + f'Deck {self}' + '#' * 10)\n",
+    "    def __str__(self):\n",
+    "        result = '#' * 10 + f' Deck {self.__hash__()} ' + '#' * 10 + '\\n'\n",
     "        for card in self.cards:\n",
-    "            print(card)\n",
-    "        print('#' * 20)\n",
-    "        print(f'{len(self.cards)} cards in the deck.')\n",
+    "            result += str(card) + '\\n'\n",
+    "        result += '#' * 20 + '\\n'\n",
+    "        result += f'{len(self.cards)} cards in the deck.\\n'\n",
     "        for suit in self.suits:\n",
-    "            print(f'{sum(1 for card in self.cards if card.suit == suit)} {suit}')\n",
-    "        print('#' * 20)"
+    "            result += f'{sum(1 for card in self.cards if card.suit == suit)} {suit}\\n'\n",
+    "        result += '#' * 20\n",
+    "        return result\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "##########Deck <__main__.Deck object at 0x1100e9af0>##########\n",
+      "########## Deck 285500682 ##########\n",
+      "9 bello\n",
+      "1 di cuori\n",
+      "10 bello\n",
+      "2 di fiori\n",
+      "2 di picche\n",
+      "5 di picche\n",
+      "1 bello\n",
+      "1 di picche\n",
       "6 di cuori\n",
+      "9 di fiori\n",
       "10 di picche\n",
-      "4 bello\n",
+      "3 bello\n",
+      "6 di fiori\n",
+      "3 di cuori\n",
+      "10 di fiori\n",
+      "7 di picche\n",
+      "4 di picche\n",
+      "1 di fiori\n",
+      "5 bello\n",
+      "9 di picche\n",
+      "7 bello\n",
+      "4 di cuori\n",
+      "5 di fiori\n",
+      "5 di cuori\n",
+      "4 di fiori\n",
       "2 di cuori\n",
+      "8 bello\n",
+      "4 bello\n",
+      "6 bello\n",
+      "2 bello\n",
       "9 di cuori\n",
       "8 di fiori\n",
-      "6 bello\n",
-      "4 di fiori\n",
-      "5 di picche\n",
-      "10 di fiori\n",
-      "3 di fiori\n",
-      "5 di fiori\n",
-      "10 di cuori\n",
-      "6 di picche\n",
-      "1 di cuori\n",
-      "5 bello\n",
-      "3 bello\n",
-      "2 di fiori\n",
       "8 di cuori\n",
-      "5 di cuori\n",
-      "7 di cuori\n",
-      "3 di picche\n",
-      "7 bello\n",
-      "1 di fiori\n",
-      "6 di fiori\n",
-      "4 di picche\n",
-      "2 di picche\n",
-      "8 bello\n",
-      "4 di cuori\n",
-      "1 bello\n",
-      "10 bello\n",
-      "1 di picche\n",
-      "7 di picche\n",
-      "9 di fiori\n",
+      "6 di picche\n",
+      "10 di cuori\n",
       "7 di fiori\n",
-      "2 bello\n",
-      "9 di picche\n",
       "8 di picche\n",
-      "3 di cuori\n",
-      "9 bello\n",
+      "3 di picche\n",
+      "7 di cuori\n",
+      "3 di fiori\n",
       "####################\n",
       "40 cards in the deck.\n",
       "10 picche\n",
@@ -162,12 +183,12 @@
    "source": [
     "deck = Deck()\n",
     "\n",
-    "deck.print()"
+    "print(deck)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,25 +204,70 @@
     "        return self.hand.pop(card_index)\n",
     "\n",
     "    def capture(self, cards: List[Card]):\n",
-    "        self.captures.extend(cards)"
+    "        self.captures.extend(cards)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'Player {self.__hash__()} for side {self.side} has {len(self.hand)} cards in hand and {len(self.captures)} captures.'\n",
+    "    \n",
+    "    def show_hand(self):\n",
+    "        out = '#' * 10 + f' Player {self.__hash__()} ' + '#' * 10 + '\\n'\n",
+    "        for card in self.hand:\n",
+    "            out += str(card) + '\\n'\n",
+    "        out += '#' * 20\n",
+    "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Players: [285514545, 276710587, 276710560, 276710488], Table: []\n",
+      "['Player 285514545 for side 1 has 10 cards in hand and 0 captures.', 'Player 276710587 for side 2 has 10 cards in hand and 0 captures.', 'Player 276710560 for side 1 has 10 cards in hand and 0 captures.', 'Player 276710488 for side 2 has 10 cards in hand and 0 captures.']\n",
+      "########## Player 285514545 ##########\n",
+      "1 di picche\n",
+      "3 di picche\n",
+      "2 di cuori\n",
+      "10 di cuori\n",
+      "5 di picche\n",
+      "10 bello\n",
+      "6 di picche\n",
+      "3 bello\n",
+      "4 di cuori\n",
+      "8 di cuori\n",
+      "####################\n"
+     ]
+    }
+   ],
    "source": [
     "class ScoponeGame:\n",
     "    def __init__(self):\n",
     "        self.deck = Deck()\n",
-    "        self.players = [Player(i for i in [1,2,1,2])]\n",
+    "        self.players = [Player(i) for i in [1,2,1,2]]\n",
     "        self.table = []\n",
     "\n",
     "    def deal_initial_hands(self):\n",
     "        for player in self.players:\n",
     "            player.hand = self.deck.deal(10)\n",
     "\n",
+    "    def __str__(self):\n",
+    "        return f\"Players: {[player.__hash__() for player in self.players]}, Table: {self.table}\"\n",
+    "    \n",
+    "    def player_details(self):\n",
+    "        return [str(player) for player in self.players]\n",
+    "\n",
+    "game = ScoponeGame()\n",
+    "game.deal_initial_hands()\n",
+    "\n",
+    "print(game)\n",
+    "\n",
+    "print(game.player_details())\n",
+    "\n",
+    "print(game.players[0].show_hand())\n",
     "\n"
    ]
   },
